tests/dataset/tpc-ds/compiler/c/q75.c
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:45Z
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:45Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct {
  int prev_year;
  int year;
  int i_brand_id;
  int i_class_id;
  int i_category_id;
  int i_manufact_id;
  int prev_yr_cnt;
  int curr_yr_cnt;
  int sales_cnt_diff;
  double sales_amt_diff;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int d_date_sk;
  int d_year;
} date_dim_t;
typedef struct {
  int len;
  date_dim_t *data;
} date_dim_list_t;
date_dim_list_t create_date_dim_list(int len) {
  date_dim_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(date_dim_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ss_item_sk;
  int ss_quantity;
  double ss_sales_price;
  int ss_sold_date_sk;
} store_sale_t;
typedef struct {
  int len;
  store_sale_t *data;
} store_sale_list_t;
store_sale_list_t create_store_sale_list(int len) {
  store_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ws_item_sk;
  int ws_quantity;
  double ws_sales_price;
  int ws_sold_date_sk;
} web_sale_t;
typedef struct {
  int len;
  web_sale_t *data;
} web_sale_list_t;
web_sale_list_t create_web_sale_list(int len) {
  web_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(web_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int cs_item_sk;
  int cs_quantity;
  double cs_sales_price;
  int cs_sold_date_sk;
} catalog_sale_t;
typedef struct {
  int len;
  catalog_sale_t *data;
} catalog_sale_list_t;
catalog_sale_list_t create_catalog_sale_list(int len) {
  catalog_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(catalog_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int i_item_sk;
  int i_brand_id;
  int i_class_id;
  int i_category_id;
  int i_manufact_id;
  const char *i_category;
} item_t;
typedef struct {
  int len;
  item_t *data;
} item_list_t;
item_list_t create_item_list(int len) {
  item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int d_year;
  int i_item_sk;
  int quantity;
  double amount;
} ss_item_t;
typedef struct {
  int len;
  ss_item_t *data;
} ss_item_list_t;
ss_item_list_t create_ss_item_list(int len) {
  ss_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(ss_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int d_year;
  int i_item_sk;
  int quantity;
  double amount;
} ws_item_t;
typedef struct {
  int len;
  ws_item_t *data;
} ws_item_list_t;
ws_item_list_t create_ws_item_list(int len) {
  ws_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(ws_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int d_year;
  int i_item_sk;
  int quantity;
  double amount;
} cs_item_t;
typedef struct {
  int len;
  cs_item_t *data;
} cs_item_list_t;
cs_item_list_t create_cs_item_list(int len) {
  cs_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(cs_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int d_year;
  int i_brand_id;
  int i_class_id;
  int i_category_id;
  int i_manufact_id;
  double sales_cnt;
  double sales_amt;
} all_sales_item_t;
typedef struct {
  int len;
  all_sales_item_t *data;
} all_sales_item_list_t;
all_sales_item_list_t create_all_sales_item_list(int len) {
  all_sales_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(all_sales_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int year;
  int brand_id;
  int class_id;
  int category_id;
  int manuf_id;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int prev_year;
  int year;
  int i_brand_id;
  int i_class_id;
  int i_category_id;
  int i_manufact_id;
  int prev_yr_cnt;
  int curr_yr_cnt;
  int sales_cnt_diff;
  int sales_amt_diff;
} result_t;
typedef struct {
  int len;
  result_t *data;
} result_list_t;
result_list_t create_result_list(int len) {
  result_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q75_simplified_result;
static void test_TPCDS_Q75_simplified() {
  tmp1_t tmp1[] = {(tmp1_t){.prev_year = 2000,
                            .year = 2001,
                            .i_brand_id = 1,
                            .i_class_id = 2,
                            .i_category_id = 3,
                            .i_manufact_id = 4,
                            .prev_yr_cnt = 100,
                            .curr_yr_cnt = 80,
                            .sales_cnt_diff = (-20),
                            .sales_amt_diff = (-200.0)}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q75_simplified_result.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q75_simplified_result.len; i3++) {
      if (test_TPCDS_Q75_simplified_result.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  date_dim_t date_dim[] = {(date_dim_t){.d_date_sk = 1, .d_year = 2000},
                           (date_dim_t){.d_date_sk = 2, .d_year = 2001}};
  int date_dim_len = sizeof(date_dim) / sizeof(date_dim[0]);
  store_sale_t store_sales[] = {(store_sale_t){.ss_item_sk = 1,
                                               .ss_quantity = 50,
                                               .ss_sales_price = 500.0,
                                               .ss_sold_date_sk = 1},
                                (store_sale_t){.ss_item_sk = 1,
                                               .ss_quantity = 40,
                                               .ss_sales_price = 400.0,
                                               .ss_sold_date_sk = 2}};
  int store_sales_len = sizeof(store_sales) / sizeof(store_sales[0]);
  web_sale_t web_sales[] = {(web_sale_t){.ws_item_sk = 1,
                                         .ws_quantity = 30,
                                         .ws_sales_price = 300.0,
                                         .ws_sold_date_sk = 1},
                            (web_sale_t){.ws_item_sk = 1,
                                         .ws_quantity = 25,
                                         .ws_sales_price = 250.0,
                                         .ws_sold_date_sk = 2}};
  int web_sales_len = sizeof(web_sales) / sizeof(web_sales[0]);
  catalog_sale_t catalog_sales[] = {(catalog_sale_t){.cs_item_sk = 1,
                                                     .cs_quantity = 20,
                                                     .cs_sales_price = 200.0,
                                                     .cs_sold_date_sk = 1},
                                    (catalog_sale_t){.cs_item_sk = 1,
                                                     .cs_quantity = 15,
                                                     .cs_sales_price = 150.0,
                                                     .cs_sold_date_sk = 2}};
  int catalog_sales_len = sizeof(catalog_sales) / sizeof(catalog_sales[0]);
  item_t item[] = {(item_t){.i_item_sk = 1,
                            .i_brand_id = 1,
                            .i_class_id = 2,
                            .i_category_id = 3,
                            .i_manufact_id = 4,
                            .i_category = "Electronics"}};
  int item_len = sizeof(item) / sizeof(item[0]);
  ss_item_list_t tmp4 = ss_item_list_t_create(store_sales.len * date_dim.len);
  int tmp5 = 0;
  for (int tmp6 = 0; tmp6 < store_sales_len; tmp6++) {
    store_sale_t ss = store_sales[tmp6];
    for (int tmp7 = 0; tmp7 < date_dim_len; tmp7++) {
      date_dim_t d = date_dim[tmp7];
      if (!(d.d_date_sk == ss.ss_sold_date_sk)) {
        continue;
      }
      tmp4.data[tmp5] = (ss_item_t){.d_year = d.d_year,
                                    .i_item_sk = ss.ss_item_sk,
                                    .quantity = ss.ss_quantity,
                                    .amount = ss.ss_sales_price};
      tmp5++;
    }
  }
  tmp4.len = tmp5;
  ws_item_list_t tmp8 = ws_item_list_t_create(web_sales.len * date_dim.len);
  int tmp9 = 0;
  for (int tmp10 = 0; tmp10 < web_sales_len; tmp10++) {
    web_sale_t ws = web_sales[tmp10];
    for (int tmp11 = 0; tmp11 < date_dim_len; tmp11++) {
      date_dim_t d = date_dim[tmp11];
      if (!(d.d_date_sk == ws.ws_sold_date_sk)) {
        continue;
      }
      tmp8.data[tmp9] = (ws_item_t){.d_year = d.d_year,
                                    .i_item_sk = ws.ws_item_sk,
                                    .quantity = ws.ws_quantity,
                                    .amount = ws.ws_sales_price};
      tmp9++;
    }
  }
  tmp8.len = tmp9;
  cs_item_list_t tmp12 =
      cs_item_list_t_create(catalog_sales.len * date_dim.len);
  int tmp13 = 0;
  for (int tmp14 = 0; tmp14 < catalog_sales_len; tmp14++) {
    catalog_sale_t cs = catalog_sales[tmp14];
    for (int tmp15 = 0; tmp15 < date_dim_len; tmp15++) {
      date_dim_t d = date_dim[tmp15];
      if (!(d.d_date_sk == cs.cs_sold_date_sk)) {
        continue;
      }
      tmp12.data[tmp13] = (cs_item_t){.d_year = d.d_year,
                                      .i_item_sk = cs.cs_item_sk,
                                      .quantity = cs.cs_quantity,
                                      .amount = cs.cs_sales_price};
      tmp13++;
    }
  }
  tmp12.len = tmp13;
  list_int sales_detail = concat(tmp4, tmp8, tmp12);
  all_sales_item_t all_sales[10];
  int all_sales_len = 0;
  for (int i16 = 0; i16 < sales_detail.len; i16++) {
    int sd = sales_detail.data[i16];
    for (int i17 = 0; i17 < item_len; i17++) {
      item_t i = item[i17];
      if (!(i.i_item_sk == sd.i_item_sk)) {
        continue;
      }
      if (!((strcmp(i.i_category, "Electronics") == 0))) {
        continue;
      }
      int tmp18 = -1;
      for (int i19 = 0; i19 < all_sales_len; i19++) {
        if (strcmp(all_sales[i19].name,
                   (tmp_item_t){.year = sd.d_year,
                                .brand_id = i.i_brand_id,
                                .class_id = i.i_class_id,
                                .category_id = i.i_category_id,
                                .manuf_id = i.i_manufact_id}) == 0) {
          tmp18 = i19;
          break;
        }
      }
      if (tmp18 == -1) {
        all_sales[all_sales_len].name =
            (tmp_item_t){.year = sd.d_year,
                         .brand_id = i.i_brand_id,
                         .class_id = i.i_class_id,
                         .category_id = i.i_category_id,
                         .manuf_id = i.i_manufact_id};
        all_sales[all_sales_len].count = 1;
        tmp18 = all_sales_len;
        all_sales_len++;
      } else {
        all_sales[tmp18].count++;
      }
    }
  }
  all_sales_item_list_t tmp20 = all_sales_item_list_t_create(all_sales_len);
  int tmp21 = 0;
  for (int tmp22 = 0; tmp22 < all_sales_len; tmp22++) {
    all_sales_item_t a = all_sales[tmp22];
    if (!(a.d_year == 2000)) {
      continue;
    }
    tmp20.data[tmp21] = a;
    tmp21++;
  }
  tmp20.len = tmp21;
  int prev_yr = first(tmp20);
  all_sales_item_list_t tmp23 = all_sales_item_list_t_create(all_sales_len);
  int tmp24 = 0;
  for (int tmp25 = 0; tmp25 < all_sales_len; tmp25++) {
    all_sales_item_t a = all_sales[tmp25];
    if (!(a.d_year == 2001)) {
      continue;
    }
    tmp23.data[tmp24] = a;
    tmp24++;
  }
  tmp23.len = tmp24;
  int curr_yr = first(tmp23);
  result_t result[] = {
      (result_t){.prev_year = prev_yr.d_year,
                 .year = curr_yr.d_year,
                 .i_brand_id = curr_yr.i_brand_id,
                 .i_class_id = curr_yr.i_class_id,
                 .i_category_id = curr_yr.i_category_id,
                 .i_manufact_id = curr_yr.i_manufact_id,
                 .prev_yr_cnt = prev_yr.sales_cnt,
                 .curr_yr_cnt = curr_yr.sales_cnt,
                 .sales_cnt_diff = curr_yr.sales_cnt - prev_yr.sales_cnt,
                 .sales_amt_diff = curr_yr.sales_amt - prev_yr.sales_amt}};
  int result_len = sizeof(result) / sizeof(result[0]);
  list_int tmp26 = list_int_create(0);
  list_int result =
      (((curr_yr.sales_cnt / prev_yr.sales_cnt) < 0.9) ? result : tmp26);
  _json_int(result.len);
  test_TPCDS_Q75_simplified_result = result;
  test_TPCDS_Q75_simplified();
  free(tmp20.data);
  free(tmp23.data);
  return 0;
}
